Updates the navbar to enhance visual appeal and responsiveness. - Restructures the navbar layout for better alignment and spacing. - Modifies styles for the logo, links, and button to achieve a cleaner and more modern look. - Adjusts media queries to ensure proper scaling on smaller screens.

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -17,14 +17,11 @@ body {
     padding-top: 135px;
 }
 
-.glass-navbar {
+.glass-element {
     background: rgba(255, 255, 255, 0.2);
     -webkit-backdrop-filter: blur(10px);
     backdrop-filter: blur(10px);
-    border: 1px solid;
     border-radius: 50px;
-    margin: 15px;
-    padding-right: 10px;
 }
 nav h1 {
     font-size: 1rem;
@@ -33,28 +30,19 @@ nav h1 {
     color: #333;
 }
 
-.navbar-logo {
-    max-height: 80px;
+.navbar-brand {
+    max-height: 90px;
     max-width: 90px;
     object-fit: cover;
 }
 
-.nav-link {
-    color: black;
-    font-weight: bold;
-    text-decoration: none;
-}
-.nav-link:hover {
-    color: #d4af37;
+nav .text-black:hover {
+    color: #d4af37 !important;
 }
 
 
 #nav-btn {
-    color: black !important;
     background-color: rgba(219, 208, 1, 0.833) !important;
-    border: 2px solid #000;
-    padding: 0.5rem 1.25rem;
-    border-radius: 25px;
     transition: all 0.3s ease;
     margin-left: 10px;
 }
@@ -180,9 +168,6 @@ footer {
         order: 4;
     }
     
-    nav h1 {
-        display: none;
-    }
     .navbar-brand {
         order: 2;
         margin: 0 auto;
@@ -215,8 +200,8 @@ footer {
 
 }
 
-@media (max-width: 575.98px) {
-    .btn {
-        font-size: 0.8rem;
+@media (max-width: 576px) {
+    #nav-btn {
+        font-size: 0.75rem;
     }
 }
